<resources>
    <string name="app_name">OderFood</string>
    <string name="dangky">ĐĂNG KÝ</string>
    <string name="huybo">HỦY BỎ</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="cmnd">Chứng minh nhân dân</string>
    <string name="loitendangnhap">Chưa có tên đăng nhập</string>
    <string name="loimatkhau">Chưa có mật khẩu</string>
    <string name="loimatkhaukhongtrungnhau">Mật khẩu chưa khớp nhau</string>
    <string name="loingaysinh">Chưa có ngày sinh</string>
    <string name="loicmnd">Chưa có chưa có chứng minh nhân dân</string>
    <string name="dangkythanhcong">Đăng ký thành công</string>
    <string name="dangnhap">ĐĂNG NHẬP</string>
    <string name="hoac">Hoặc</string>
    <string name="taotaikhoanmoi">Tạo tài khoản mới</string>
    <string name="dangnhapthatbai">Tên đăng nhập hoặc mật khẩu không đúng</string>
    <string name="dangnhapthanhcong">Xin chào</string>
    <string name="trangchu">Trang chủ</string>
    <string name="thucdon">Thực đơn</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="thongke">Thống kê</string>
    <string name="caidat">Cài đặt</string>
    <string name="mo">Mở</string>
    <string name="dong">Đóng</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="thembanan">Tên bàn</string>
    <string name="chon">Chọn</string>
    <string name="thembananthanhcong">Thêm bàn ăn thành công</string>
    <string name="thembananthatbai">Thêm bàn ăn thất bại</string>
    <string name="themthucdon">Thêm thực đơn</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="giatien">Giá tiền</string>
    <string name="thoat">Thoát</string>
    <string name="themloaimonan">Thêm loại món ăn</string>
    <string name="vuilongthemloaimonan">Vui lòng thêm loại món ăn</string>
    <string name="themloaimonanthanhcong">Thêm loại món ăn thành công</string>
    <string name="themloaimonanthatbai">Thêm loại món ăn thất bại</string>
    <string name="themmonanthatbai">Thêm món ăn thất bại</string>
    <string name="themmonanthanhcong">Thêm món ăn thành công</string>
    <string name="vuilongdiendayduthongtin">Vui lòng điền đầy đủ thông tin</string>
    <string name="themsoluong">Thêm số lượng</string>
    <string name="soluong">Số lượng</string>
    <string name="tongtien">Tổng tiền : </string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="sua">Sửa</string>
    <string name="xoa">Xóa</string>
    <string name="xoathanhcong">Xóa thành công</string>
    <string name="loi">Lỗi !</string>
    <string name="suathanhcong">Sửa thành công !</string>


</resources>
