<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_thanh_toan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorTrang"
    tools:context="com.project.luulinhson.oderfood.Activity.ThanhToanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tenmonan"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/margin_size_5"
            android:background="@color/colorXanhDuong"


            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/soluong"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/margin_size_5"
            android:background="@color/colorXanhDuong"



            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/giatien"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/colorXanhDuong"

            />

    </LinearLayout>

    <GridView
        android:id="@+id/gvhienthithanhtoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        >

    </GridView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size40dp"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/padding"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tenmonan"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/margin_size_5"


            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tongtien"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/margin_size_5"
            android:background="@color/colorDo"

            />
        <TextView
            android:id="@+id/tvtongtien"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/colorDo"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding"
        android:layout_marginBottom="@dimen/padding"
        >
        <Button
            android:id="@+id/btnthanhtoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginLeft="@dimen/padding"
            android:background="@drawable/btn_background"
            android:text="@string/thanhtoan"
            />

        <Button
            android:id="@+id/btnthoatthanhtoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:background="@drawable/btn_background_orange"
            android:text="@string/thoat"
            />
    </LinearLayout>

</LinearLayout>
