<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dang_nhap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorXanhDuong"
    tools:context="com.project.luulinhson.oderfood.Activity.DangNhapActivity">

    <TextView
        android:id="@+id/tvdangnhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangnhap"
        android:textSize="@dimen/font30sp"
        android:textStyle="bold"
        android:textColor="@color/colorTrang"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <LinearLayout
        android:id="@+id/lndangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <EditText
            android:id="@+id/edtendangnhapDN"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:background="@drawable/editext_backgroud"
            android:drawableLeft="@drawable/person"
            android:padding="@dimen/padding"
            android:drawablePadding="@dimen/padding"
            android:hint="@string/tendangnhap"
            android:textColorHint="@color/colorXam"
            android:textColor="@color/colorDen"
            android:inputType="text"
            android:maxLines="1"
            />
        <EditText
            android:id="@+id/edmatkhauDN"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:background="@drawable/editext_backgroud"
            android:drawableLeft="@drawable/key"
            android:padding="@dimen/padding"
            android:layout_marginTop="@dimen/distance_margin_top"
            android:drawablePadding="@dimen/padding"
            android:hint="@string/matkhau"
            android:textColorHint="@color/colorXam"
            android:textColor="@color/colorDen"
            android:inputType="textPassword"
            android:maxLines="1"
            />
        <Button
            android:id="@+id/btndangnhap"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:text="@string/dangnhap"
            android:background="@drawable/btn_background"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginTop="@dimen/distance_margin_top_size_30"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_below="@+id/lndangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:id="@+id/tvtaotaikhoanmoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taotaikhoanmoi"
                android:layout_marginTop="@dimen/layout_height"
                android:textColor="@color/colorDen"
                />
            <TextView
                android:id="@+id/tvnutdangky"
                android:layout_toRightOf="@id/tvtaotaikhoanmoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dangky"
                android:layout_marginTop="@dimen/layout_height"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_size_5"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>
