<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_them_thuc_don"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorXanhDuong"
    tools:context="com.project.luulinhson.oderfood.Activity.ThemThucDonActivity">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/themthucdon"
       android:textStyle="bold"
       android:textSize="@dimen/font30sp"
       android:layout_gravity="center"
       android:layout_weight="1"
       />
   <LinearLayout
       android:layout_marginTop="@dimen/distance_margin_top_size_30"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       >

      <ImageButton
          android:id="@+id/imbthemthucdon"
          android:layout_weight="1"
          android:layout_width="match_parent"
          android:layout_height="@dimen/height_header"
          android:layout_marginRight="@dimen/margin_size_5"
          />

      <LinearLayout
          android:layout_weight="1"
          android:layout_width="match_parent"
          android:layout_height="@dimen/height_header"
          android:orientation="vertical"
          android:layout_marginLeft="@dimen/margin_size_5"
          >
         <EditText
             android:id="@+id/edtenmonan"
             android:layout_width="match_parent"
             android:layout_height="@dimen/padding"
             android:background="@drawable/editext_backgroud"
             android:layout_weight="1"
             android:hint="@string/tenmonan"
             android:textColorHint="@color/colorXam"
             android:paddingLeft="@dimen/padding"
             android:textColor="@color/colorDen"
             android:padding="@dimen/padding"
             />
         <EditText
             android:id="@+id/edgiatienmonan"
             android:layout_width="match_parent"
             android:layout_height="@dimen/padding"
             android:background="@drawable/editext_backgroud"
             android:layout_weight="1"
             android:layout_marginTop="@dimen/padding"
             android:hint="@string/giatien"
             android:textColorHint="@color/colorXam"
             android:paddingLeft="@dimen/padding"
             android:textColor="@color/colorDen"
             android:padding="@dimen/padding"
             android:inputType="number"
             />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="@dimen/padding"
             android:gravity="right"
             >
            <Spinner
                android:id="@+id/spthemloaimonan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/padding"
                >
            </Spinner>

            <ImageButton
                android:id="@+id/imbadd"
                android:layout_width="@dimen/layout_height"
                android:layout_height="@dimen/layout_height"
                android:background="@drawable/add"
                android:layout_gravity="center"
                />
         </LinearLayout>
      </LinearLayout>
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_weight="1"
       android:padding="@dimen/padding"
       >
      <Button
          android:id="@+id/btnchonthemthucdon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@drawable/btn_background_orange"
          android:layout_marginRight="@dimen/padding"
          android:text="@string/chon"
          />
      <Button
          android:id="@+id/btnthoatthemthucdon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@drawable/btn_background"
          android:layout_marginLeft="@dimen/padding"
          android:text="@string/thoat"
          />

   </LinearLayout>

</LinearLayout>

